--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTasksApp"
         android:hardwareAccelerated="false"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:largeHeap="true">
         <activity android:name=".MainActivity">
             <intent-filter>
